fix text overflow on comment button

--- a/src/components/Textarea/Textarea.module.css
+++ b/src/components/Textarea/Textarea.module.css
@@ -1,14 +1,26 @@
+.wrapper {
+  height: 135px;
+  border: 1px solid var(--gray-muted);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
 .textarea {
   width: 100%;
-  height: 135px;
+  height: 100%;
   padding: 28px 20px;
-  border-radius: 10px;
-  border: 1px solid var(--gray-muted);
 
   font-size: 14px;
 
   resize: none;
   outline: none;
+  border: none;
+
+  scrollbar-width: thin;
+}
+
+.bottomSpace {
+  border-bottom: 60px solid transparent;
 }
 
 .textarea::placeholder {
